@@ -461,6 +461,7 @@ transport.last=Last
 transport.previous=Previous
 transport.next=Next
 transport.metronome=Metronome
+transport.count-down=Count Down
 transport.mode=Play Mode
 transport.mode.simple=Simple Mode
 transport.mode.simple.tempo-percent=Percentage of tempo
@@ -839,6 +840,7 @@ action.transport.play=Play Song
 action.transport.stop=Stop Playing
 action.transport.mode=Player Mode
 action.transport.metronome=Metrononome
+action.transport.count-down=Count Down
 action.transport.set-loop-start=Set loop start point
 action.transport.set-loop-end=Set loop end point
 action.tools.browser=Browser
